--- a/Code/DealerWebsite/Views/Account/Register.cshtml
+++ b/Code/DealerWebsite/Views/Account/Register.cshtml
@@ -1,6 +1,7 @@
 ﻿@model DealerWebsite.Models.RegisterModel
 @{
     ViewBag.Title = "Register";
+    Layout = "~/Views/Layouts/Default/_wideLayout.cshtml";
 }
 
 <hgroup class="title">
