more prototyping using schema.org micro formatting

--- a/Code/DealerWebsite/Views/Home/About.cshtml
+++ b/Code/DealerWebsite/Views/Home/About.cshtml
@@ -1,3 +1,22 @@
 ﻿@{
     Layout = "~/Views/Layouts/Default/_wideLayout.cshtml";
 }
+
+
+<ul class="clearing-thumbs" data-clearing>
+    <li>
+        <a class="th" href="@Url.Content("~/Images/comet.jpg")">
+            <img src="@Url.Content("~/Images/comet-th.jpg")" />
+        </a>
+    </li>
+    <li>
+        <a class="th" href="@Url.Content("~/Images/comet.jpg")">
+            <img src="@Url.Content("~/Images/comet-th.jpg")" />
+        </a>
+    </li>
+    <li>
+        <a class="th" href="@Url.Content("~/Images/comet.jpg")">
+            <img src="@Url.Content("~/Images/comet-th.jpg")" />
+        </a>
+    </li>
+</ul>
