--- a/Code/DealerWebsite/Views/Inventory/Index.cshtml
+++ b/Code/DealerWebsite/Views/Inventory/Index.cshtml
@@ -8,5 +8,6 @@
     @Html.Ipsum().ul(listCount : 8, wordCount : 2, links : true)
 }
 
-<h2>Inventory</h2>
+<h2>Categories</h2>
+@Html.Ipsum().p()
 @Html.Action("ImageList", "Image")
