--- a/Code/DealerWebsite/Views/Home/Index.cshtml
+++ b/Code/DealerWebsite/Views/Home/Index.cshtml
@@ -1,8 +1,4 @@
-﻿@{
-    Layout = "~/Views/Layouts/Default/_asideLayout.cshtml";
-}
-
-@section aside{
+﻿@section aside{
     @Html.Placehold(1200, 300, "Logo")
 
     <div class="row">
