--- a/Code/DealerWebsite/Views/Home/About.cshtml
+++ b/Code/DealerWebsite/Views/Home/About.cshtml
@@ -1,6 +1,9 @@
-﻿@{
-    Layout = "~/Views/Layouts/Default/_wideLayout.cshtml";
+﻿@section aside{
+    <h3>Galleries</h3>
+    @Html.Ipsum().ul(listCount : 5, wordCount : 2, links : true)
 }
+
+
 
 <h3>About Us</h3>
 @Html.Ipsum().p(3)
