--- a/Code/DealerWebsite/Views/Home/Contact.cshtml
+++ b/Code/DealerWebsite/Views/Home/Contact.cshtml
@@ -1,4 +1,8 @@
 ﻿@{
     ViewBag.Title = "Contact";
-    Layout = "~/Views/Layouts/Default/_wideLayout.cshtml";
+}
+
+@section aside{
+    <h3>Galleries</h3>
+    @Html.Ipsum().ul(listCount : 5, wordCount : 2, links : true)
 }
