prototyped services and gallery pages
also started filling in microdata

--- a/Code/DealerWebsite/Content/Themes/Default/site.css
+++ b/Code/DealerWebsite/Content/Themes/Default/site.css
@@ -14,3 +14,8 @@ footer h1, footer h2, footer h3, footer h4, footer h5, footer h6, footer div {
     color: #fff;
 }
 
+.float-left {
+    float: left;
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
