--- a/Code/DealerWebsite/Views/Gallery/Gallery.cshtml
+++ b/Code/DealerWebsite/Views/Gallery/Gallery.cshtml
@@ -4,14 +4,12 @@
 
 
 @section aside{
-    <h3>Galleries</h3>
-    @Html.Ipsum().ul(listCount : 5, wordCount : 2, links : true)
+    <h3>Our Work</h3>
+    @Html.Ipsum().ul(listCount : 3, wordCount : 2, links : true)
 }
-
 
 <h2>Gallery</h2>
 
-@Html.Ipsum().p(1)
 
 <blockquote>
     @Html.Ipsum().p(1)
