--- a/Code/DealerWebsite/Views/Home/Index.cshtml
+++ b/Code/DealerWebsite/Views/Home/Index.cshtml
@@ -23,20 +23,7 @@
 
 
 
-<ul class="example-orbit" data-orbit>
-    <li>
-        @Html.Placehold(900, 400, "First Image", null, null, new { alt = "First Image" })
-        <div class="orbit-caption">Caption One.</div>
-    </li>
-    <li class="active">
-        @Html.Placehold(900, 400, "Second Image", null, null, new { alt = "Second Image" })
-        <div class="orbit-caption">Caption Two. </div>
-    </li>
-    <li>
-        @Html.Placehold(900, 400, "Third Image", null, null, new { alt = "Third Image" })
-        <div class="orbit-caption">Caption Three. </div>
-    </li>
-</ul>
+@Html.Partial("~/Views/Image/ImageCarousel.cshtml")
 
 
 @Html.Ipsum().p(paragraphCount: 3, sentenceCount: 5)
