--- a/Code/DealerWebsite/Views/Layouts/Default/Layout.cshtml
+++ b/Code/DealerWebsite/Views/Layouts/Default/Layout.cshtml
@@ -29,6 +29,7 @@
             @RenderSection("aside", true)
         </aside>
     </div>
+    @RenderSection("Bottom", false)
 
     @Html.Partial("_footer")
 
