--- a/Code/DealerWebsite/Views/Services/Index.cshtml
+++ b/Code/DealerWebsite/Views/Services/Index.cshtml
@@ -3,11 +3,11 @@
 }
 
 @section aside{
-    <h3>Services</h3>
+    <h3>Parts & Service</h3>
     @Html.Ipsum().ul(listCount : 3, wordCount : 2, links : true)
 }
 
-<h2>Services</h2>
+<h2>Parts & Service</h2>
 @Html.Ipsum().p(3)
 
 @Html.Action("ImageList", "Image")
