--- a/Code/DealerWebsite/Views/Navigation/MainNav.cshtml
+++ b/Code/DealerWebsite/Views/Navigation/MainNav.cshtml
@@ -22,10 +22,10 @@
             </li>
             <li class="divider"></li>
             <li class="has-dropdown">
-                @Html.ActionLink("Services", "Index", "Services")
+                @Html.ActionLink("Parts & Services", "Index", "Services")
                 <ul class="dropdown">
-                    <li id="" data-seq="1">@Html.ActionLink("Service 1", "Service", "Services", new { Id = 1 }, null)</li>
-                    <li id="" data-seq="1">@Html.ActionLink("Service 2", "Service", "Services", new { Id = 2 }, null)</li>
+                    <li id="" data-seq="1">@Html.ActionLink("Service", "Service", "Services", new { Id = 1 }, null)</li>
+                    <li id="" data-seq="1">@Html.ActionLink("Parts", "Service", "Services", new { Id = 2 }, null)</li>
                 </ul>
             </li>
             <li class="divider"></li>
