--- a/Code/DealerWebsite/Views/Services/Service.cshtml
+++ b/Code/DealerWebsite/Views/Services/Service.cshtml
@@ -3,7 +3,7 @@
 }
 
 @section aside{
-    <h3>Services</h3>    
+    <h3>Parts & Service</h3>    
     @Html.Ipsum().ul(listCount : 3, wordCount : 2, links : true)
 }
 
