--- a/Code/DealerWebsite/Views/Home/About.cshtml
+++ b/Code/DealerWebsite/Views/Home/About.cshtml
@@ -1,6 +1,6 @@
-﻿@section aside{
-    <h3>Galleries</h3>
-    @Html.Ipsum().ul(listCount : 5, wordCount : 2, links : true)
+﻿@{
+    ViewBag.Title = "About";
+    Layout = "~/Views/Layouts/Default/Wide.cshtml";
 }
 
 
