--- a/Code/DealerWebsite/Views/Navigation/Breadcrumbs.cshtml
+++ b/Code/DealerWebsite/Views/Navigation/Breadcrumbs.cshtml
@@ -1,6 +1,6 @@
 ﻿<nav class="breadcrumbs">
     <a href="#">Home</a>
-    <a href="#">Features</a>
-    <a class="unavailable" href="#">Gene Splicing</a>
-    <a class="current" href="#">Cloning</a>
+    <a href="#">@Html.Ipsum().Words(1)</a>
+    <a class="unavailable" href="#">@Html.Ipsum().Words(1)</a>
+    <a class="current" href="#">@Html.Ipsum().Words(1)</a>
 </nav>
