--- a/Code/DealerWebsite/Views/Staff/Member.cshtml
+++ b/Code/DealerWebsite/Views/Staff/Member.cshtml
@@ -9,6 +9,6 @@
 
 <h2>@Html.Ipsum().Words(2)</h2>
 
-@Html.Placehold(200, 200, text: "Member Photo", htmlAttributes: new {@class="float-left"})
+@Html.Placehold(200, 200, text: "Member Photo", htmlAttributes: new {@class="left th pad"})
 
 @Html.Ipsum().p(5)
