--- a/Code/DealerWebsite/Views/Home/Contact.cshtml
+++ b/Code/DealerWebsite/Views/Home/Contact.cshtml
@@ -3,8 +3,6 @@
 }
 
 @section aside{
-    @Html.Placehold(1200, 300, "Logo")
-
     <div class="row">
         <div class="small-12 medium-4 large-12 columns">
             <h3>Inventory</h3>
@@ -85,7 +83,7 @@
             </div>
             <div class="row">
                 <div class="large-12 columns">
-                    <input type="submit" class="button" />
+                    <input type="submit" class="button" value="Send" />
                 </div>
             </div>
 
