--- a/Code/DealerWebsite/Views/Layouts/Default/TwoColumn.cshtml
+++ b/Code/DealerWebsite/Views/Layouts/Default/TwoColumn.cshtml
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="@ViewBag.Keywords" />
     <meta name="description" content="@ViewBag.Description" />
-    <title>@ViewBag.Title - Company Name</title>
+    <title>@ViewBag.Title | Company Name</title>
 
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     @Html.Partial("_themeReference")
@@ -21,11 +21,14 @@
 
     @Html.Action("Breadcrumbs", "Navigation")
 
+    @RenderSection("Top", false)
+
     <div class="row">
         <article class="large-9 large-push-3 columns">
             @RenderBody()
         </article>
         <aside class="large-3 large-pull-9 columns">
+            @Html.Placehold(1200, 300, "Logo")
             @RenderSection("aside", true)
         </aside>
     </div>
